[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-inline-extras"
dynamic = ["version"]
description = "Extra inline syntax for Python-Markdown"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = []
authors = [
    {name = "AnonymousRand"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "markdown~=3.7"
]

[project.urls]
Homepage = "https://github.com/AnonymousRand/python-markdown-inline-extras"
Documentation = "https://github.com/AnonymousRand/python-markdown-inline-extras#readme"
Issues = "https://github.com/AnonymousRand/python-markdown-inline-extras/issues"

[tool.hatch.version]
path = "src/markdown_inline_extras/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/markdown_inline_extras tests}"

[tool.coverage.run]
source_pkgs = ["markdown_inline_extras", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
markdown_inline_extras = ["src/markdown_inline_extras", "*/markdown-inline-extras/src/markdown_inline_extras"]
tests = ["tests", "*/markdown-inline-extras/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
